--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "gulp-kit-11",
-  "version": "0.1.0",
-  "description": "Integrates node-kit 0.11.0 with gulp to compile .kit files",
+  "name": "gulp-nodekit",
+  "version": "1.0.0",
+  "description": "Integrates latest node-kit with gulp to compile .kit files with variables",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gfra54/gulp-kit"
-  },
-  "keywords": [
-    "gulp",
-    "codekit",
-    "html",
-    "node-kit"
-  ],
-  "author": "Gilles FRANCOIS>",
-  "license": "BSD-2-Clause",
-  "bugs": {
-    "url": "https://github.com/gfra54/gulp-kit/issues"
-  },
   "dependencies": {
     "node-kit": "0.11.0",
-    "through2": "~0.6.1",
-    "gulp-util": "~3.0.1"
-  }
+    "through2": "~0.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gfra54/gulp-nodekit.git"
+  },
+  "keywords": [
+    "codekit",
+    "node-kit",
+    "gulp",
+    "html"
+  ],
+  "author": "Gilles FRANCOIS",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gfra54/gulp-nodekit/issues"
+  },
+  "homepage": "https://github.com/gfra54/gulp-nodekit#readme"
 }
